# iconv-alt

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
include/: iconv.h  sjis_table.h
scripts/: gen_cases.py  gen_sjis_table.py
src/: README.md  iconv_core.c  iconv_stub.c  sjis.c  utf8.c
tests/: CMakeLists.txt  README.md  auto_rt.cpp  sjis_utf8.cpp  smoke.cpp
